Added resume to navbar & added imgs to imgs folder

--- a/_site.yml
+++ b/_site.yml
@@ -6,6 +6,9 @@ navbar:
     - text: "Home"
       icon: fa-home
       href: index.html
+    - text: "Resume"
+      icon: fa-user
+      href: Wesley-Noble-CV.html
     - text: "GIS Work"
       icon: fa-globe
       href: geog176A.html
